; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/nilfs2/extr_segment.c_nilfs_collect_file_bmap.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/nilfs2/extr_segment.c_nilfs_collect_file_bmap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nilfs_sc_info = type { i32 }
%struct.buffer_head = type { i32 }
%struct.inode = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.nilfs_sc_info*, %struct.buffer_head*, %struct.inode*)* @nilfs_collect_file_bmap to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nilfs_collect_file_bmap(%struct.nilfs_sc_info* %0, %struct.buffer_head* %1, %struct.inode* %2) #0 {
  %4 = alloca %struct.nilfs_sc_info*, align 8
  %5 = alloca %struct.buffer_head*, align 8
  %6 = alloca %struct.inode*, align 8
  store %struct.nilfs_sc_info* %0, %struct.nilfs_sc_info** %4, align 8
  store %struct.buffer_head* %1, %struct.buffer_head** %5, align 8
  store %struct.inode* %2, %struct.inode** %6, align 8
  %7 = load %struct.buffer_head*, %struct.buffer_head** %5, align 8
  %8 = call i32 @buffer_dirty(%struct.buffer_head* %7)
  %9 = icmp ne i32 %8, 0
  %10 = xor i1 %9, true
  %11 = zext i1 %10 to i32
  %12 = call i32 @WARN_ON(i32 %11)
  %13 = load %struct.nilfs_sc_info*, %struct.nilfs_sc_info** %4, align 8
  %14 = load %struct.buffer_head*, %struct.buffer_head** %5, align 8
  %15 = load %struct.inode*, %struct.inode** %6, align 8
  %16 = call i32 @nilfs_segctor_add_file_block(%struct.nilfs_sc_info* %13, %struct.buffer_head* %14, %struct.inode* %15, i32 4)
  ret i32 %16
}

declare dso_local i32 @WARN_ON(i32) #1

declare dso_local i32 @buffer_dirty(%struct.buffer_head*) #1

declare dso_local i32 @nilfs_segctor_add_file_block(%struct.nilfs_sc_info*, %struct.buffer_head*, %struct.inode*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
